Remove <big>Arthur</big> from #about and avatar image on mobile. Fix container padding and footer font sizes.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="css/typography.css" rel="stylesheet" type="text/css" />
     <link href="css/progress-bar.css" rel="stylesheet" type="text/css" />
     <link href="//fonts.googleapis.com/css?family=Roboto:500,400,100,300" rel="stylesheet" type="text/css" />
-    <link href="//fonts.googleapis.com/css?family=Roboto+Slab:100,400" rel="stylesheet" type="text/css" />
+    <link href="//fonts.googleapis.com/css?family=Roboto+Slab:100,300,400" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -47,9 +47,8 @@
       <div class="container center">
         <div class="row">
           <div id="column-1" class="column column-50 pull-left">
-            <img class="avatar center show-on-mobile" src="img/avatar.jpg" />
             <p><big>Hello,</big></p>
-            <p>my name is <big>Arthur</big> and I&#39;m a <strong>developer</strong>, a 20 years old Computer Science <strong>student</strong> at the Federal University of Minas Gerais in Brazil and an overall <strong>learner</strong>.</p>
+            <p>my name is <strong>Arthur Xavier</strong> and I&#39;m a <strong>developer</strong>, a 20 years old Computer Science <strong>student</strong> at the Federal University of Minas Gerais in Brazil and an overall <strong>learner</strong>.</p>
             <p><strong>Excellence</strong> and <strong>passion</strong> are the keys to success and a happy professional life. Being able to make things happen is maybe the greatest virtue of the ones taking a shot in the technology branch and the opportunity of making an being the difference is what drives us all.</p>
             <p>As an active self-taught developer with many years of experience I can say that coding is one of the greatest passions I have in my life, next to music and language learning.</p>
             <p>As an amateur designer, I’ve learned that the search for balance and beauty and these qualities themselves are what impress people.</p>
@@ -134,16 +133,18 @@
       <div class="container center">
         <ul>
           <li>
-            <table>
-              <tr>
-                <td><div class="round" style="background-image: url(img/experience/bitfusion.png)"></div></td>
-                <td>
-                  <h3>UI and UX developer</h3>
-                  <em>Oct 2015 &mdash; today</em>
-                  <p>Full-stack freelance developer working in one the most prominent startup companies of the year. Main focus is UI and UX design and developement using AngularJS, HTML5 and CSS3.</p>
-                </td>
-              </tr>
-            </table>
+            <a href="http://www.bitfusion.io/">
+              <table>
+                <tr>
+                  <td><div class="round" style="background-image: url(img/experience/bitfusion.png)"></div></td>
+                  <td>
+                    <h3>UI and UX developer</h3>
+                    <em>Oct 2015 &mdash; Today</em>
+                    <p>Full-stack freelance developer working in one the most prominent startup companies of the year. Main focus is UI and UX design and developement using AngularJS, HTML5 and CSS3.</p>
+                  </td>
+                </tr>
+              </table>
+            </a>
           </li>
           <li><div class="vertical-dots"></div></li>
           <li>
