Added package.json, changed brush-stroke, some typography and layout geometry

--- a/index.html
+++ b/index.html
@@ -44,20 +44,19 @@
       ABOUT
     -->
     <section id="about">
-      <div class="container center">
+      <div class="container center bg-stroke">
         <div class="row">
-          <div id="column-1" class="column column-50 pull-left">
+          <div class="column column-50 pull-left" style="padding-bottom: 0">
             <p><big>Hello,</big></p>
             <p>my name is <strong>Arthur Xavier</strong> and I&#39;m a <strong>developer</strong>, a 20 years old Computer Science <strong>student</strong> at the Federal University of Minas Gerais in Brazil and an overall <strong>learner</strong>.</p>
             <p><strong>Excellence</strong> and <strong>passion</strong> are the keys to success and a happy professional life. Being able to make things happen is maybe the greatest virtue of the ones taking a shot in the technology branch and the opportunity of making an being the difference is what drives us all.</p>
-            <p>As an active self-taught developer with many years of experience I can say that coding is one of the greatest passions I have in my life, next to music and language learning.</p>
-            <p>As an amateur designer, I’ve learned that the search for balance and beauty and these qualities themselves are what impress people.</p>
+            <p>As an active self-taught developer with many years of experience I can say that coding is one of the greatest passions I have in my life, next to art, music and language learning.</p>
           </div>
 
           <div class="column column-50 pull-left">
             <img class="avatar center hide-on-mobile" src="img/avatar.jpg" />
-            <p><strong>I love</strong> getting to know and working with new technologies and trends. The <strong>state of the art</strong> is my state.</p>
-            <p><strong>Node.JS</strong>, the new hype, is my favourite. I'm deeply interested in functional programming and all its capabilities, foremost, the ability to write simple yet powerful code, which one can easily verify and reason about.</p>
+            <p><strong>I love</strong> getting to know and working with new technologies and trends. The <strong>state of the art</strong> is my art.</p>
+            <p><strong>Node.JS</strong>, the new hype, is my favourite. I'm also deeply interested in design, web development, functional programming and all its capabilities, foremost, the ability to write simple yet powerful code, which one can easily verify and reason about.</p>
           </div>
         </div>
       </div>
