Update current job info

--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
                 <tr>
                   <td><div class="round" style="background-image: url(img/experience/bitfusion.png)"></div></td>
                   <td>
-                    <h3>UI and UX developer</h3>
+                    <h3>Full-stack web developer</h3>
                     <em>Oct 2015 &mdash; Today</em>
-                    <p>Full-stack freelance developer working in one the most prominent startup companies of the year. Main focus is UI and UX design and developement using AngularJS, HTML5 and CSS3.</p>
+                    <p>Full-stack freelance developer working in one the most prominent startup companies of the year. Main focus is UI and UX design and developement using AngularJS, HTML5 and CSS3 but I also work on the Node.JS and MongoDB backend.</p>
                   </td>
                 </tr>
               </table>
