Added Eyebrow, fixed responsiveness, links now open on new tab

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="container center">
         <ul>
           <li>
-            <a href="http://www.tu-dortmund.de/">
+            <a href="http://www.tu-dortmund.de/" target="_blank">
               <table>
                 <tr>
                   <td><div class="round" style="background-image: url(img/education/tu-dortmund.jpg)"></div></td>
@@ -89,7 +89,7 @@
           </li>
           <li><div class="vertical-dots"></div></li>
           <li>
-            <a href="https://www.ufmg.br/">
+            <a href="https://www.ufmg.br/" target="_blank">
               <table>
                 <tr>
                   <td><div class="round" style="background-image: url(img/education/ufmg.jpg)"></div></td>
@@ -104,7 +104,7 @@
           </li>
           <li><div class="vertical-dots"></div></li>
           <li>
-            <a href="http://www.cefetmg.br/">
+            <a href="http://www.cefetmg.br/" target="_blank">
               <table>
                 <tr>
                   <td><div class="round" style="background-image: url(img/education/cefet-mg.jpg)"></div></td>
@@ -132,7 +132,7 @@
       <div class="container center">
         <ul>
           <li>
-            <a href="http://www.bitfusion.io/">
+            <a href="http://www.bitfusion.io/" target="_blank">
               <table>
                 <tr>
                   <td><div class="round" style="background-image: url(img/experience/bitfusion.png)"></div></td>
@@ -147,7 +147,7 @@
           </li>
           <li><div class="vertical-dots"></div></li>
           <li>
-            <a href="https://github.com/arthur-xavier/modelr">
+            <a href="https://github.com/arthur-xavier/modelr" target="_blank">
               <table>
                 <tr>
                   <td><div class="round" style="background-image: url(img/experience/modelr.png)"></div></td>
@@ -155,7 +155,7 @@
                     <h3>Scholarship Holder</h3>
                     <em>Mar 2013 &mdash; Jun 2013</em>
                     <p>Development of a prototype mobile application for 3D model generation out of 2D sketches. Student of Professor Erickson Nascimento at the Federal University of Minas Gerais (UFMG).</p>
-                    <p>Mobile implementation of the methods described in the paper <em>Utilização de arte conceitual para geração de modelos 3D</em><small> &mdash; Renato Dias Viana*, Renato Antonio Celso Ferreira</small></p>
+                    <p class="hidden-small">Mobile implementation of the methods described in the paper <em>Utilização de arte conceitual para geração de modelos 3D</em><small> &mdash; Renato Dias Viana*, Renato Antonio Celso Ferreira</small></p>
                   </td>
                 </tr>
               </table>
@@ -163,7 +163,7 @@
           </li>
           <li><div class="vertical-dots"></div></li>
           <li>
-            <a href="http://homepages.dcc.ufmg.br/~erickson/publications/drewsjr_icpr2014.pdf">
+            <a href="http://homepages.dcc.ufmg.br/~erickson/publications/drewsjr_icpr2014.pdf" target="_blank">
               <table>
                 <tr>
                   <td><div class="round" style="background-image: url(img/experience/underwater.png)"></div></td>
@@ -171,7 +171,7 @@
                     <h3>Scholarship Holder</h3>
                     <em>Oct 2012 &mdash; Mar 2013</em>
                     <p>Research in Computer Graphics about Underwater Rendering. Student of Professor Erickson Nascimento at the Federal University of Minas Gerais (UFMG).</p>
-                    <p>
+                    <p class="hidden-small">
                       Paper accepted in the ICPR 2014 Conference:
                       <br />
                       <em>Generalized Optical Flow Model for Scattering Media</em><small> &mdash; Paulo Drews*, Erickson Nascimento, Arthur Xavier, Mario Montenegro Campos Campos</small>
@@ -183,7 +183,7 @@
           </li>
           <li><div class="vertical-dots"></div></li>
           <li>
-            <a href="http://www.hostnet.com.br/oah/">
+            <a href="http://www.hostnet.com.br/oah/" target="_blank">
               <table>
                 <tr>
                   <td><div class="round" style="background-image: url(img/experience/oah.jpg)"></div></td>
@@ -333,11 +333,11 @@
       <div class="container center">
 
         <ul>
-          <li style="width: 100%">
-            <a href="http://adaptor.bitfusion.io/">
+          <li style="max-width: 100%">
+            <a href="http://adaptor.bitfusion.io/" target="_blank">
               <table>
                 <tr>
-                  <td><div class="round" style="width: 120px; height: 120px; background: url(img/portfolio/adaptor.jpg) center center; background-size: cover"></div></td>
+                  <td><div class="round" style="background: url(img/portfolio/adaptor.jpg) center center; background-size: cover"></div></td>
                   <td>
                     <h3>Bitfusion Cloud Adaptor website</h3>
                     <em>Nov 2015</em>
@@ -349,7 +349,22 @@
           </li>
 
           <li>
-            <a href="https://github.com/arthur-xavier/croak">
+            <a href="https://github.com/arthur-xavier/eyebrow" target="_blank">
+              <table>
+                <tr>
+                  <td><div class="round" style="background: url(img/portfolio/eyebrow.jpg) top left; background-size: cover"></div></td>
+                  <td>
+                    <h3>Eyebrow</h3>
+                    <em>Nov 2015</em>
+                    <p>Minimalistic JavaScript library for the development of single-page webapps. Inspired by React and Redux.</p>
+                  </td>
+                </tr>
+              </table>
+            </a>
+          </li>
+
+          <li>
+            <a href="https://github.com/arthur-xavier/croak" target="_blank">
               <table>
                 <tr>
                   <td><div class="round" style="background: url(img/portfolio/croak.jpg) top left; background-size: cover"></div></td>
@@ -363,15 +378,15 @@
             </a>
           </li>
 
-          <li>
-            <a href="/">
+          <li style="max-width: 100%">
+            <a href="/" target="_blank">
               <table>
                 <tr>
                   <td><div class="round" style="background-image: url(img/portfolio/arthurxavier.jpg)"></div></td>
                   <td>
                     <h3>Personal Website</h3>
                     <em>Dec 2014</em>
-                    <p>HTML5 personal website and online résumé.</p>
+                    <p>HTML5 personal website and online portfolio, redesigned in September 2015.</p>
                   </td>
                 </tr>
               </table>
@@ -379,7 +394,7 @@
           </li>
 
           <li>
-            <a href="https://www.npmjs.com/package/diamond.js">
+            <a href="https://www.npmjs.com/package/diamond.js" target="_blank">
               <table>
                 <tr>
                   <td><div class="round" style="background: url(img/portfolio/diamond.jpg) top left; background-size: cover"></div></td>
@@ -394,14 +409,14 @@
           </li>
 
           <li>
-            <a href="http://www.dcc.ufmg.br/~xavier/gravity">
+            <a href="http://arthur-xavier.github.io/gravity/" target="_blank">
               <table>
                 <tr>
                   <td><div class="round" style="background-image: url(img/portfolio/gravity.jpg)"></div></td>
                   <td>
                     <h3>Gravity</h3>
                     <em>May 2014</em>
-                    <p>Simple yet awesome HTML5 physics-based game.</p>
+                    <p>Simple yet funny HTML5 physics-based game written in CoffeeScript.</p>
                   </td>
                 </tr>
               </table>
