Add take.net; change technical skills; remove Haskell from technical skills

--- a/index.html
+++ b/index.html
@@ -132,6 +132,21 @@
       <div class="container center">
         <ul>
           <li>
+            <a href="http://take.net/" target="_blank">
+              <table>
+                <tr>
+                  <td><div class="round" style="background-image: url(img/experience/takenet.png)"></div></td>
+                  <td>
+                    <h3>Research and Development Intern</h3>
+                    <em>Dec 2015 &mdash; Today</em>
+                    <p>At <strong>take.net</strong> I work on the development of platforms and APIs aimed at the market of Messaging Services. I work mainly with C#, ASP.NET and frontend web development.</p>
+                  </td>
+                </tr>
+              </table>
+            </a>
+          </li>
+          <li><strong style="font-size: 1.5em; margin: 0 100px; color: #D0D0D0;">&amp;</strong></li>
+          <li>
             <a href="http://www.bitfusion.io/" target="_blank">
               <table>
                 <tr>
@@ -215,14 +230,14 @@
         <div class="center">
           <h4>JAVASCRIPT / NODE.JS</h4>
           <div class="progress-bar" style="float: left">
-            <div class="progress" style="width: 90%"></div>
+            <div class="progress" style="width: 95%"></div>
           </div>
           <span>90%</span>
         </div>
         <div class="center">
           <h4>HTML5 / CSS3 / JQUERY</h4>
           <div class="progress-bar" style="float: left">
-            <div class="progress" style="width: 85%"></div>
+            <div class="progress" style="width: 90%"></div>
           </div>
           <span>85%</span>
         </div>
@@ -239,13 +254,6 @@
             <div class="progress" style="width: 70%"></div>
           </div>
           <span>70%</span>
-        </div>
-        <div class="center">
-          <h4>Haskell</h4>
-          <div class="progress-bar" style="float: left">
-            <div class="progress" style="width: 60%"></div>
-          </div>
-          <span>60%</span>
         </div>
       </div>
 
