Add links to resume, and to github and twitter profiles

--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
     <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,700" rel="stylesheet" type="text/css" />
   </head>
 
-  <body style="display: flex; align-items: center; justify-content: center">
-    <div style="text-align: center; margin-top: -4.5rem">
+  <body>
+    <header>
       <h4>&mdash; Arthur Xavier &mdash;</h4>
-      <h1>Em desenvolvimento</h1>
-      <img src="img/flourish.svg" alt="" />
-    </div>
+      <h1>Under development</h1>
+    </header>
+    <img src="img/flourish.svg" alt="" />
+    <nav>
+      <a href="resume.pdf">Résumé</a>
+      &middot;
+      <a href="//github.com/arthurxavierx">Github</a>
+      &middot;
+      <a href="//twitter.com/arthurxavierx">Twitter</a>
+    </nav>
   </body>
 </html>
