Add link to talks repository

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <nav>
       <a href="resume.pdf">Résumé</a>
       &middot;
+      <a href="//github.com/arthurxavierx/talks/blob/master/README.md">Talks</a>
+      &middot;
       <a href="//github.com/arthurxavierx">Github</a>
       &middot;
       <a href="//twitter.com/arthurxavierx">Twitter</a>
