Small visual adjustments

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <link href="css/layout.css" rel="stylesheet" type="text/css" />
     <link href="css/typography.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -21,7 +22,7 @@
       <h4>&mdash; Arthur Xavier &mdash;</h4>
       <h1>Under development</h1>
     </header>
-    <img src="img/flourish.svg" alt="" />
+    <img class="flourish" src="img/flourish.svg" alt="" />
     <nav>
       <a href="resume.pdf">Résumé</a>
       &middot;
