--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <img class="flourish" src="img/flourish.svg" alt="" />
     <nav>
-      <a href="resume.pdf">Résumé</a>
+      <a target="_blank" href="resume.pdf">Résumé</a>
       &middot;
       <a href="//github.com/arthurxavierx/talks/blob/master/README.md">Talks</a>
       &middot;
