Add portfolio page

--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
 
   <body>
     <header>
-      <h4>&mdash; Arthur Xavier &mdash;</h4>
+      <h5>&mdash; Arthur Xavier &mdash;</h5>
       <h1>Under development</h1>
     </header>
+
     <img class="flourish" src="img/flourish.svg" alt="" />
+
     <nav>
       <a target="_blank" href="resume.pdf">Résumé</a>
+      &middot;
+      <a href="portfolio.html">Portfolio</a>
       &middot;
       <a href="//github.com/arthurxavierx/talks/blob/master/README.md">Talks</a>
       &middot;
