Add language information to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,31 +19,30 @@
 
   <body>
     <header>
-      <h1 style="text-align: left">Portfolio</h1>
+      <h1>Portfolio</h1>
+      <img class="flourish" src="img/flourish.svg" alt="" />
     </header>
-
-    <img class="flourish" src="img/flourish.svg" alt="" />
 
     <article>
       <ul class="no-bullet">
 
         <li>
-          <h4><a href="//arthurxavierx.github.io/reverse-highway">Reverse Highway</a> (WIP)</h4>
-          <p>Audio visualization experiment with WebGL for an electronic house song I composed.</p>
+          <h4><a href="//arthurxavierx.github.io/reverse-highway">Reverse Highway</a> *</h4>
+          <p>Audio visualization experiment with WebGL for an electronic house song I composed. <em>Work in progress</em>.</p>
         </li>
 
         <li>
           <h4><a href="//github.com/arthurxavierx/purescript-comonad-ui-todos">Comonadic TODOs</a></h4>
           <p>
-            Simple task management application written for my bachelor thesis with three
-            different UI architectures modelled under the same approach based on Phil Freeman's
-            <a href="//blog.functorial.com/posts/2016-08-07-Comonads-As-Spaces.html">Comonads as spaces</a>.
+            Simple task management application written in PureScript for my bachelor
+            thesis with three different UI architectures modelled under the same approach
+            based on Phil Freeman's <a href="//blog.functorial.com/posts/2016-08-07-Comonads-As-Spaces.html">Comonads as spaces</a>.
           </p>
         </li>
 
         <li>
           <h4><a href="//arthurxavierx.github.io/gravity">Gravity</a></h4>
-          <p>Simple HTML5 physics-based game.</p>
+          <p>Simple HTML5 physics-based game written in CoffeeScript. <em>Desktop only</em>.</p>
         </li>
 
         <li>
