Update WIP status on reverse-highway

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,8 @@
       <ul class="no-bullet">
 
         <li>
-          <h4><a href="//arthurxavierx.github.io/reverse-highway">Reverse Highway</a> *</h4>
-          <p>Audio visualization experiment with WebGL for an electronic house song I composed. <em>Work in progress</em>.</p>
+          <h4><a href="//arthurxavierx.github.io/reverse-highway">Reverse Highway</a></h4>
+          <p>Audio visualization experiment with WebGL for an electronic house song I composed.</p>
         </li>
 
         <li>
