Add second part of bachelor thesis

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,16 @@
       <ul class="no-bullet">
 
         <li>
+          <h4><a href="//github.com/arthurxavierx/purescript-comonad-rss">CoRSS</a></h4>
+          <p>
+            Real-world RSS feed reader written in PureScript for the second part of
+            my bachelor thesis: <a href="https://github.com/arthurxavierx/purescript-comonad-rss/raw/master/RealWorldAppComonadicUI.pdf">A Real-World Application with a Comonadic User Interface</a>.
+          </p>
+        </li>
+
+        <li>
           <h4><a href="//arthurxavierx.github.io/contour-lines">Contour Lines</a></h4>
-          <p>Generative art experiment with terrain contour lines. <em>Non-mobile device recommended.</em></p>
+          <p>Graphics experiment with terrain contour lines. <em>Non-mobile device recommended.</em></p>
         </li>
 
         <li>
@@ -39,9 +47,10 @@
         <li>
           <h4><a href="//github.com/arthurxavierx/purescript-comonad-ui-todos">Comonadic TODOs</a></h4>
           <p>
-            Simple task management application written in PureScript for my bachelor
-            thesis with three different UI architectures modelled under the same approach
-            based on Phil Freeman's <a href="//blog.functorial.com/posts/2016-08-07-Comonads-As-Spaces.html">Comonads as spaces</a>.
+            Simple task management application written in PureScript for the first part of my bachelor
+            thesis (<a href="https://github.com/arthurxavierx/purescript-comonad-ui-todos/raw/master/ComonadsForUIs.pdf">Comonads for User Interfaces</a>)
+            with three different UI architectures modelled under the same approach.
+            Based on Phil Freeman's <a href="//blog.functorial.com/posts/2016-08-07-Comonads-As-Spaces.html">Comonads as spaces</a>.
           </p>
         </li>
 
