--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav>
       <a target="_blank" href="resume.pdf">Résumé</a>
       &middot;
-      <a href="portfolio.html">Portfolio</a>
+      <a href="projects.html">Projects</a>
       &middot;
       <a href="//github.com/arthurxavierx/talks/blob/master/README.md">Talks</a>
       &middot;
