Add dates to projects

--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,7 @@
 
         <li>
           <h4><a href="//github.com/arthurxavierx/purescript-comonad-rss">CoRSS</a></h4>
+          <small class="date"><span class="month">jun</span> 2018</small>
           <p>
             Real-world RSS feed reader written in PureScript for the second part of
             my bachelor thesis: <a href="https://github.com/arthurxavierx/purescript-comonad-rss/raw/master/RealWorldAppComonadicUI.pdf">A Real-World Application with a Comonadic User Interface</a>.
@@ -36,16 +37,19 @@
 
         <li>
           <h4><a href="//arthurxavierx.github.io/contour-lines">Contour Lines</a></h4>
+          <small class="date"><span class="month">feb</span> 2018</small>
           <p>Graphics experiment with terrain contour lines. <em>Non-mobile device recommended.</em></p>
         </li>
 
         <li>
           <h4><a href="//arthurxavierx.github.io/reverse-highway">Reverse Highway</a></h4>
+          <small class="date"><span class="month">jan</span> 2018</small>
           <p>Audio visualization experiment with WebGL for an electronic house song I composed.</p>
         </li>
 
         <li>
           <h4><a href="//github.com/arthurxavierx/purescript-comonad-ui-todos">Comonadic TODOs</a></h4>
+          <small class="date"><span class="month">nov</span> 2017</small>
           <p>
             Simple task management application written in PureScript for the first part of my bachelor
             thesis (<a href="https://github.com/arthurxavierx/purescript-comonad-ui-todos/raw/master/ComonadsForUIs.pdf">Comonads for User Interfaces</a>)
@@ -57,12 +61,8 @@
         </li>
 
         <li>
-          <h4><a href="//arthurxavierx.github.io/gravity">Gravity</a></h4>
-          <p>Simple HTML5 physics-based game written in CoffeeScript. <em>Desktop only</em>.</p>
-        </li>
-
-        <li>
           <h4><a href="//github.com/arthurxavierx/atom-which-key">atom-which-key</a></h4>
+          <small class="date"><span class="month">feb</span> 2017</small>
           <p>
             Atom package that displays available keybindings in a panel.
             Inspired by Emacs' <a href="//elpa.gnu.org/packages/which-key.html">which-key</a>.
@@ -70,7 +70,14 @@
         </li>
 
         <li>
+          <h4><a href="//arthurxavierx.github.io/gravity">Gravity</a></h4>
+          <small class="date"><span class="month">dec</span> 2014</small>
+          <p>Simple HTML5 physics-based game written in CoffeeScript. <em>Desktop only</em>.</p>
+        </li>
+
+        <li>
           <h4><a href="//github.com/arthurxavierx/modelr">Modelr</a></h4>
+          <small class="date"><span class="month">jun</span> 2014</small>
           <p>Android application for the generation of 3D models based on two-dimensional sketches.</p>
         </li>
 
