Update links to bachelor thesis

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
           <small class="date"><span class="month">jun</span> 2018</small>
           <p>
             Real-world RSS feed reader written in PureScript for the second part of
-            my bachelor thesis: <a href="https://github.com/arthurxavierx/purescript-comonad-rss/raw/master/RealWorldAppComonadicUI.pdf">A Real-World Application with a Comonadic User Interface</a>.
+            my bachelor thesis: <a href="//arthurxavierx.github.io/RealWorldAppComonadicUI.pdf">A Real-World Application with a Comonadic User Interface</a>.
           </p>
         </li>
 
@@ -52,7 +52,7 @@
           <small class="date"><span class="month">nov</span> 2017</small>
           <p>
             Simple task management application written in PureScript for the first part of my bachelor
-            thesis (<a href="https://github.com/arthurxavierx/purescript-comonad-ui-todos/raw/master/ComonadsForUIs.pdf">Comonads for User Interfaces</a>)
+            thesis (<a href="//arthurxavierx.github.io/ComonadsForUIs.pdf">Comonads for User Interfaces</a>)
             with three different UI architectures modelled under the same approach.
           </p>
           <p>
